:adhesive_bandage: chores: update post application PostServiceImpl class to get better sonarQube Quality